--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@ normalization</p>
       <div class="flex items-center"><div class="w-4 h-4 border border-accent-cyan mr-3"></div><span>Built detailed CAD models (CATIA/Fusion 360) for aircraft assemblies.</span></div>
     </div>
     <div class="mt-4">
-      <img src="./assets/hydroart/Tail_Assembly v33.png" alt="Tail Assembly" class="w-full h-32 object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./assets/hydroart/Tail_Assembly v33.png', 'Tail Assembly')">
+      <img src="./graphics/tablefinal.svg" alt="Tail Assembly" class="w-full h-32 object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/tablefinal.svg', 'Tail Assembly')">
       <p class="text-xs text-center mt-2">Tail Assembly</p>
     </div>
   </div>
@@ -4502,6 +4502,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
