--- a/index.html
+++ b/index.html
@@ -2040,12 +2040,22 @@ normalization</p>
       <div class="flex items-center"><div class="w-4 h-4 border border-accent-cyan mr-3"></div><span>Conducted structural airframe sizing to meet load and hydrogen-safety requirements.</span></div>
       <div class="flex items-center"><div class="w-4 h-4 border border-accent-cyan mr-3"></div><span>Built detailed CAD models (CATIA/Fusion 360) for aircraft assemblies.</span></div>
     </div>
-    <div class="mt-4">
-      <img src="./graphics/tablefinal.svg" alt="Tail Assembly" class="w-full h-32 object-contain rounded border border-[var(--accent-cyan)] cursor-pointer" onclick="openModal('./graphics/tablefinal.svg', 'Tail Assembly')">
-      <p class="text-xs text-center mt-2">Tail Assembly</p>
+       <!-- BIG IMAGE 2: BOTTOM-RIGHT (Principal Diagonal) -->
+    <div class="project-card bg-gradient-to-br from-purple-900/20 to-blue-900/20 rounded-xl overflow-hidden border border-[var(--accent-cyan)] shadow-lg flex flex-col">
+      <h3 class="orbitron text-lg font-bold p-3 text-success-green bg-gradient-to-b from-transparent to-black/10">
+        FINAL DESIGN TABLE
+      </h3>
+      <div class="flex-1 p-3 bg-white/5 flex items-center justify-center">
+        <img 
+          src="./graphics/tablefinal.svg" 
+          alt="Final Design Table" 
+          class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform"
+          onclick="openModal('./graphics/tablefinal.svg', 'Final Design Table')">
+      </div>
+      <p class="text-xs text-center italic text-gray-300 px-3 pb-3">
+        1400 × 2100 pt – Complete results
+      </p>
     </div>
-  </div>
-</div>
 
 
 
@@ -4605,6 +4615,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
