--- a/index.html
+++ b/index.html
@@ -2389,9 +2389,6 @@ normalization</p>
             <div class="carousel-item flex-shrink-0 w-full h-full">
               <img src="./graphics/fig3.png" alt=" Canonical Curve " class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/fig3.png', 'Mathematically Modeled Canonical Curve')">
             </div>
-            <div class="carousel-item flex-shrink-0 w-full h-full">
-              <img src="./graphics/fig5.png" alt="Work Completed 3" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/fig5.png', 'Global Demand Profile')">
-            </div>
           </div>
           <button onclick="slideCarousel('work-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
           <button onclick="slideCarousel('work-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
@@ -2418,9 +2415,7 @@ normalization</p>
             <div class="carousel-item flex-shrink-0 w-full h-full">
               <img src="./graphics/fig4.png" alt="Regional (Magnitude +Timeshift)" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./graphics/fig4.png', 'Regional Contribution(magnitude + time shift)')">
             </div>
-            <div class="carousel-item flex-shrink-0 w-full h-full">
-              <img src="./assets/hydroart/detailed_explanation.svg" alt="Detailed Explanation 3" class="w-full h-full object-contain cursor-pointer" onclick="openModal('./assets/hydroart/detailed_explanation.svg', 'Compute-to-Power Conversion')">
-            </div>
+           
           </div>
           <button onclick="slideCarousel('explanation-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
           <button onclick="slideCarousel('explanation-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
@@ -2465,14 +2460,12 @@ normalization</p>
         <div class="relative overflow-hidden w-full h-full rounded">
           <div class="carousel-container" id="table-carousel">
             <div class="carousel-item">
-              <img src="./graphics/tablefinal.svg" alt="Final Design Table 1" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal.svg', 'Final Design Table - Complete Results')">
+              <img src="./graphics/tablefinal.svg" alt="Design Explanation" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal.svg', 'Detailed Explanation')">
             </div>
             <div class="carousel-item">
-              <img src="./graphics/tablefinal2.svg" alt="Final Design Table 2" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal2.svg', 'Final Design Table - Detailed Breakdown')">
+              <img src="./graphics/tablefinal2.png" alt="Research Paper(Not Published)" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal2.png', 'Research Paper(Not Published)')">
             </div>
-            <div class="carousel-item">
-              <img src="./graphics/tablefinal3.svg" alt="Final Design Table 3" class="max-w-full max-h-full object-contain cursor-pointer hover:scale-[1.02] transition-transform m-auto" onclick="openModal('./graphics/tablefinal3.svg', 'Final Design Table - Summary')">
-            </div>
+            
           </div>
           <button onclick="slideCarousel('table-carousel', -1)" class="absolute left-2 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10 font-bold">‹</button>
           <button onclick="slideCarousel('table-carousel', 1)" class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10 font-bold">›</button>
@@ -4627,6 +4620,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
